# ImageProcessingServiceDemo

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Dockerfile  PROJECT_DESCRIPTION.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cpp.yml  python.yml
cpp/: CMakeLists.txt  build.sh  fast_resize.cpp
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
minikube/: 00-namespace.yaml  01-configmap.yaml  02-postgres.yaml  03-pvc.yaml  04-deployment.yaml  05-service.yaml  06-hpa.yaml  README.md  demo.sh  setup.sh  teardown.sh
src/: config.py  main.py
src/application/dto/: image_dto.py
src/application/use_cases/: apply_retention.py  get_image.py  list_images.py  process_image.py  upload_image.py
src/domain/entities/: image.py  retention_policy.py
src/domain/interfaces/: image_processor.py  image_repository.py  image_storage.py
src/infrastructure/cache/: cached_image_repository.py  in_memory_cache.py
src/infrastructure/database/: models.py  postgres_image_repository.py  session.py
src/infrastructure/processing/: pillow_processor.py  pipeline.py
src/infrastructure/storage/: local_image_storage.py
src/presentation/api/: dependencies.py  (+1 more)
tests/: conftest.py
tests/application/: test_apply_retention.py  test_process_image.py  test_upload_image.py
tests/domain/: test_image_entity.py  test_retention_policy.py
tests/infrastructure/: test_cached_repository.py  test_local_storage.py  test_pillow_processor.py
tests/presentation/: test_api.py
(+4 files in other folders)
